# c-datastructures

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  example.c
src/: CMakeLists.txt  common.c  common.h  linked_list.c  queue.c  stack.c
src/include/: common_public.h  data_structures.h  linked_list.h  queue.h  stack.h
tests/: CMakeLists.txt  test_common.c  test_linked_list.c  test_queue.c  test_stack.c
