macro(add_test_file NAME)
	add_executable(${NAME})
	target_sources(${NAME} PRIVATE ${NAME}.c )
	set_target_properties(${NAME} PROPERTIES COMPILE_OPTIONS "-Wno-unused")
    target_link_libraries(${NAME} PRIVATE data_structures_lib)
	set_target_properties(${NAME} PROPERTIES C_STANDARD 11)
	target_compile_options(${NAME} PUBLIC -Wall -Wextra)
	add_test(${NAME} ${NAME})
	set_tests_properties(${NAME} PROPERTIES FIXTURES_REQUIRED test_fixture)
endmacro(add_test_file)

add_test_file(test_common)
add_test_file(test_linked_list)
add_test_file(test_stack)
add_test_file(test_queue)
